# Synapse

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml  synapse-update.ps1  tmp_synapse_726_uia_fixture.ps1
crates/synapse-action/: Cargo.toml
crates/synapse-action/examples/: issue_228_manual_fsv.rs
crates/synapse-action/src/: clipboard.rs  dynamics.rs  emitter.rs  error.rs  handle.rs  hotkey.rs  invoke.rs  lease.rs  lib.rs  path.rs  rate_limit.rs  recovery.rs
crates/synapse-action/src/backend/: mod.rs  mouse_coordinates.rs  recording.rs  software.rs  text_dispatch.rs  unavailable.rs  vigem.rs
crates/synapse-action/src/emitter/: backends.rs  routing.rs
crates/synapse-action/src/invoke/: dispatch.rs  resolver.rs  tests.rs
crates/synapse-action/tests/: backend_resolution_fsv.rs  dynamics_fsv.rs  dynamics_round_trip_proptest.rs  error_codes_match.rs  hardware_unavailable.rs  hardware_unavailable_fsv.rs  recording_backend_fsv.rs  session_inputs.rs
crates/synapse-action/tests/snapshots/: recording_backend_fsv__recording_backend_action_variants.snap
crates/synapse-mcp/: Cargo.toml
crates/synapse-mcp/src/: approval_protocol.rs  chrome_debugger_bridge.rs  doctor.rs  local_agent.rs  m1.rs  m2.rs  m3.rs  m4.rs  main.rs  safety.rs  server.rs
crates/synapse-mcp/src/http/: auth.rs  dashboard_auth.rs  mod.rs  sse.rs  transport.rs
crates/synapse-mcp/src/m1/: detection.rs  ocr.rs  sources.rs
crates/synapse-mcp/src/m2/: click.rs  clipboard.rs  config.rs  drag.rs  focus_window.rs  pad.rs  press.rs  release_all.rs  scroll.rs  stroke.rs  type_text.rs
crates/synapse-mcp/src/m3/: a11y_events.rs  approvals.rs  (+20 more)
crates/synapse-mcp/tests/: cli_modes.rs  health_tools_list.rs  m1_tools_fsv.rs  m2_act_drag_motion_semantics.rs  m2_clipboard_fsv.rs  m2_drag_fsv.rs  m2_file_menu_invoke_fsv.rs  m2_notepad_type_save.rs  m2_release_all_fsv.rs  m2_tools_fsv.rs  m2_type_fsv.rs  m3_audio_transcribe_tool.rs  m3_data_cleaning_tool.rs  m3_default_resolution.rs  m3_hygiene_report_tool.rs  m3_intent_current_tool.rs  m3_intent_events_tool.rs  m3_reflex_cancel_tool.rs  m3_reflex_history_tool.rs  m3_reflex_list_tool.rs  m3_reflex_register_tool.rs  m3_routine_lifecycle_tool.rs  m3_routine_mine_tool.rs  m3_subscribe_tool.rs  m3_timeline_digest_tool.rs  m3_timeline_search_tool.rs  m3_tools_list.rs  m4_agent_query_tool.rs  m4_agent_tasks_tool.rs  m4_agent_templates_tool.rs  m4_tools_list.rs  m5_curated_registry_tool.rs  m5_registry_report_tool.rs  multi_agent_capability_matrix.rs  notify_human_toast.rs
crates/synapse-overlay/: Cargo.toml
crates/synapse-perception/: Cargo.toml
crates/synapse-perception/benches/: hud_template_match.rs  observe_warm_a11y_only.rs  observe_warm_hybrid.rs
crates/synapse-perception/src/: error.rs  lib.rs  ocr.rs  template_match.rs
crates/synapse-perception/tests/: cdp_diagnostics_regression.rs  perception_fsv.rs  template_match.rs
crates/synapse-reflex/: Cargo.toml
crates/synapse-reflex/benches/: reflex_tick_jitter_idle.rs  reflex_tick_jitter_under_load.rs
crates/synapse-reflex/src/: audit.rs  audit_state.rs  bus.rs  error.rs  lib.rs  lifecycle.rs  runtime.rs  scheduler.rs  scheduler_combo.rs  scheduler_loop.rs  scheduler_stateful.rs  scheduler_stats.rs  scheduler_tick.rs  scheduler_windows.rs  storage.rs
crates/synapse-reflex/tests/: combo_behavior.rs  hold_move_behavior.rs  scheduler_behavior.rs  scheduler_fsv.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: hid_protocol_parser.rs
(+310 files in other folders)
