[package]
name = "synapse-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "synapse-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
rmcp.workspace = true
synapse-core = { version = "0.1.0", path = "../synapse-core" }
synapse-telemetry = { version = "0.1.0", path = "../synapse-telemetry" }
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
synapse-test-utils = { version = "0.1.0", path = "../synapse-test-utils" }

[lints]
workspace = true
