[package]
name = "synapse-overlay"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
overlay = []

[[bin]]
name = "synapse-overlay"
path = "src/main.rs"

[dependencies]
synapse-core = { version = "0.1.0", path = "../synapse-core" }
synapse-telemetry = { version = "0.1.0", path = "../synapse-telemetry" }
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
