[package]
name = "synapse-reflex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
crossbeam.workspace = true
serde.workspace = true
synapse-action = { version = "0.1.0", path = "../synapse-action" }
synapse-core = { version = "0.1.0", path = "../synapse-core" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
